:lipstick: avoid horizontal overflow

--- a/main.css
+++ b/main.css
@@ -118,6 +118,7 @@ body {
   line-height: 1.5;
   background-color: var(--bg);
   color: var(--text);
+  word-break: break-all;
 }
 
 body {
